--- a/feature/pom.xml
+++ b/feature/pom.xml
@@ -200,6 +200,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-etcd</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-exec</artifactId>
         </dependency>
         <dependency>
