--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <version-maven-surefire-plugin>2.18.1</version-maven-surefire-plugin>
         <version-maven-war-plugin>3.0.0</version-maven-war-plugin>
         <version-properties-maven-plugin>1.0-alpha-2</version-properties-maven-plugin>
-        <version-smartics-maven-plugin>2.1.2</version-smartics-maven-plugin>
+        <version-smartics-maven-plugin>2.1.3-SNAPSHOT</version-smartics-maven-plugin>
         <version-wildfly-build-tools>1.1.6.Final</version-wildfly-build-tools>
         <version-wildfly-maven-plugin>1.2.0.Alpha3</version-wildfly-maven-plugin>
         <version-xmlbeans-maven-plugin>2.3.3</version-xmlbeans-maven-plugin>
