--- a/feature/pack/pom.xml
+++ b/feature/pack/pom.xml
@@ -274,6 +274,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-flink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-freemarker</artifactId>
         </dependency>
         <dependency>
