--- a/feature/pack/pom.xml
+++ b/feature/pack/pom.xml
@@ -414,6 +414,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-milo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-mina2</artifactId>
         </dependency>
         <dependency>
