--- a/feature/modules/pom.xml
+++ b/feature/modules/pom.xml
@@ -221,6 +221,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-atmos</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-atmosphere-websocket</artifactId>
         </dependency>
         <dependency>
