Spike of getting Restlet consumers working on Undertow

--- a/subsystem/pom.xml
+++ b/subsystem/pom.xml
@@ -49,6 +49,7 @@
     <modules>
         <module>core</module>
         <module>cdi</module>
+        <module>restlet</module>
         <module>security</module>
         <module>undertow</module>
     </modules>
