--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -90,6 +90,11 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly.camel</groupId>
+                <artifactId>wildfly-camel-subsystem-restlet</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.camel</groupId>
                 <artifactId>wildfly-camel-subsystem-security</artifactId>
                 <version>${project.version}</version>
             </dependency>
