--- a/feature/modules/pom.xml
+++ b/feature/modules/pom.xml
@@ -87,6 +87,10 @@
         </dependency>
         <dependency>
             <groupId>org.wildfly.camel</groupId>
+            <artifactId>wildfly-camel-subsystem-restlet</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.camel</groupId>
             <artifactId>wildfly-camel-subsystem-security</artifactId>
         </dependency>
         <dependency>
@@ -715,6 +719,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-restlet</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-rest-swagger</artifactId>
         </dependency>
         <dependency>
@@ -995,6 +1003,11 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.restlet.jee</groupId>
+            <artifactId>org.restlet.ext.servlet</artifactId>
+            <version>2.3.6</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
