--- a/subsystem/core/src/main/resources/org/wildfly/extension/camel/parser/LocalDescriptions.properties
+++ b/subsystem/core/src/main/resources/org/wildfly/extension/camel/parser/LocalDescriptions.properties
@@ -31,3 +31,6 @@ camel-context.write=Update a CamelContext definition
 
 # Attributes on the camel resource
 camel.endpoints=The registered endpoint URLs
+
+# Operations on the camel resource
+camel.health=The health status of camel contexts
